--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,8 @@
   "version": "0.1.0",
   "description": "A Strapi application",
   "scripts": {
+    "prod-build": "NODE_ENV=production yarn build",
+    "prod-start": "NODE_ENV=production pm2 start server.js --name api",
     "develop": "strapi develop",
     "start": "strapi start",
     "build": "strapi build",
@@ -17,6 +19,7 @@
     "@strapi/plugin-users-permissions": "4.22.1",
     "@strapi/strapi": "4.22.1",
     "better-sqlite3": "8.6.0",
+    "pm2": "^5.3.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "5.3.4",
