--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -3,7 +3,8 @@ version: '3'
 services:
   strapi:
     container_name: strapi
-    image: strapi/strapi
+    build: .
+    image: strapi:latest
     restart: unless-stopped
     env_file: .env
     environment:
