--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,19 +1,27 @@
 FROM node:18-alpine3.18
 # Installing libvips-dev for sharp Compatibility
 RUN apk update && apk add --no-cache build-base gcc autoconf automake zlib-dev libpng-dev nasm bash vips-dev git
-ARG NODE_ENV=development
-ENV NODE_ENV=${NODE_ENV}
 
 WORKDIR /opt/
+RUN mkdir -p /opt/node_modules
 COPY package.json yarn.lock ./
 RUN yarn global add node-gyp
 RUN yarn config set network-timeout 600000 -g && yarn install
 ENV PATH /opt/node_modules/.bin:$PATH
 
 WORKDIR /opt/app
-COPY . .
+COPY .strapi .
+COPY package.json .
+COPY yarn.lock .
+COPY types .
+COPY src .
+COPY public .
+COPY favicon.png .
+COPY jsconfig.json .
+COPY server.js .
+COPY config .
 RUN chown -R node:node /opt/app
 USER node
 RUN ["yarn", "build"]
 EXPOSE 1337
-CMD ["yarn", "develop"]
+CMD ["yarn", "prod-start"]
