--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "description": "A Strapi application",
   "scripts": {
     "prod-build": "NODE_ENV=production yarn build",
-    "prod-start": "NODE_ENV=production pm2 start server.js --name api",
+    "prod-start": "NODE_ENV=production yarn build && pm2 start server.js --name api",
     "develop": "strapi develop",
     "start": "strapi start",
     "build": "strapi build",
