--- a/frontend/.env_prod
+++ b/frontend/.env_prod
@@ -1,2 +1,2 @@
-VUE_APP_STRAPI_API_URL=http://localhost:1438
-VUE_APP_GRAPHQL_URL=http://localhost:1438/graphql
+VUE_APP_STRAPI_API_URL=https://api.sly.n21.fr
+VUE_APP_GRAPHQL_URL=https://api.sly.n21.fr/graphql
