--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "@strapi/plugin-graphql": "4.22.1",
     "@strapi/plugin-i18n": "4.22.1",
     "@strapi/plugin-users-permissions": "4.22.1",
+    "@strapi/provider-email-nodemailer": "^4.22.1",
     "@strapi/strapi": "4.22.1",
     "better-sqlite3": "8.6.0",
     "pg": "^8.11.5",
