--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,10 @@
     "core-js": "^3.8.3",
     "graphql": "^16.8.1",
     "graphql-tag": "^2.12.6",
+    "less": "^4.2.0",
+    "less-loader": "^12.2.0",
     "react": "^18.2.0",
+    "uikit": "^3.20.8",
     "vue": "^3.2.13",
     "vue-router": "4"
   },
