--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "less-loader": "^12.2.0",
     "react": "^18.2.0",
     "uikit": "^3.20.8",
+    "v-lazy-image": "^2.1.1",
     "vue": "^3.2.13",
     "vue-router": "4"
   },
