--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {},
   "dependencies": {
+    "@retikolo/drag-drop-content-types": "^1.5.2",
     "@strapi/plugin-cloud": "4.22.1",
     "@strapi/plugin-graphql": "4.22.1",
     "@strapi/plugin-i18n": "4.22.1",
@@ -25,6 +26,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "5.3.4",
+    "strapi-plugin-duplicate-button": "^1.1.14",
     "styled-components": "5.3.3"
   },
   "author": {
