--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,8 @@
     "v-lazy-image": "^2.1.1",
     "vue": "^3.2.13",
     "vue-router": "4",
-    "vuejs3-logger": "^1.0.0"
+    "vuejs3-logger": "^1.0.0",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
