--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "v-lazy-image": "^2.1.1",
     "vue": "^3.2.13",
     "vue-router": "4",
+    "vue-strapi-blocks-renderer": "^0.2.2",
     "vuejs3-logger": "^1.0.0",
     "vuex": "^4.1.0"
   },
