--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18.0.0",
     "react-router-dom": "5.3.4",
     "strapi-plugin-duplicate-button": "^1.1.14",
+    "strapi-plugin-fuzzy-search": "^2.2.1",
     "styled-components": "5.3.3"
   },
   "author": {
