--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "5.3.4",
+    "strapi-paypal": "^1.1.0",
     "strapi-plugin-duplicate-button": "^1.1.14",
     "strapi-plugin-fuzzy-search": "^2.2.1",
     "styled-components": "5.3.3"
