update masonry plugin

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "@apollo/client": "^3.9.10",
     "@vue/apollo-option": "^4.0.0",
-    "@yeger/vue-masonry-wall": "^5.0.9",
     "core-js": "^3.8.3",
     "graphql": "^16.8.1",
     "graphql-tag": "^2.12.6",
@@ -21,6 +20,7 @@
     "uikit": "^3.20.8",
     "v-lazy-image": "^2.1.1",
     "vue": "^3.2.13",
+    "vue-masonry": "^0.16.0",
     "vue-router": "4",
     "vue-strapi-blocks-renderer": "^0.2.2",
     "vuejs3-logger": "^1.0.0",
