--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "prod": "NODE_ENV=production vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "format": "prettier src --write"
   },
   "dependencies": {
     "@apollo/client": "^3.9.10",
