--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   strapi:
-    container_name: strapi
+    container_name: ${APP_NAME}
     build: .
     image: strapi:latest
     restart: always
@@ -29,12 +29,12 @@ services:
       - db
 
   db:
-    container_name: strapi_db
+    container_name: ${APP_NAME}_db
     image: postgres
     restart: always
     volumes:
       - ./db:/var/lib/postgresql/data
     environment:
-      POSTGRES_USER: strapi
-      POSTGRES_PASSWORD: 3G6Xa84DgCWHKwdpXMeF
+      POSTGRES_USER: ${DATABASE_USERNAME}
+      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
       POSTGRES_DB: strapi
