--- a/.github/workflows/deploy_picasol.yml
+++ b/.github/workflows/deploy_picasol.yml
@@ -25,6 +25,7 @@ jobs:
         key: ${{ secrets.PRIVATE_KEY }}
         port: ${{ secrets.PORT }}
         script: |
+          source ~/.bashrc
           cd ~/picasol
           git pull
           ./update.sh
