--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@babel/core": "^7.24.7",
     "@babel/eslint-parser": "^7.24.7",
+    "@babel/plugin-transform-class-static-block": "^7.26.0",
     "@babel/plugin-transform-private-methods": "^7.24.7",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
