--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,20 @@
+COMPOSE_PROJECT_NAME=your_project_name
+APP_NAME=your_project_name
+DATABASE_CLIENT=postgres
+DATABASE_HOST=db
+DATABASE_PORT=5432
+DATABASE_NAME=strapi
+DATABASE_USERNAME=strapi
+DATABASE_PASSWORD=tobemodified
 HOST=0.0.0.0
-PORT=1337
-APP_KEYS="toBeModified1,toBeModified2"
+PORT=1350
+APP_KEYS=tobemodified,tobemodified,tobemodified,tobemodified
 API_TOKEN_SALT=tobemodified
 ADMIN_JWT_SECRET=tobemodified
 TRANSFER_TOKEN_SALT=tobemodified
+NODE_ENV=production
 JWT_SECRET=tobemodified
+SMTP_HOST=your_smtp_host
+SMTP_PORT=587
+SMTP_EMAIL=webtile@example.com
+SMTP_PASSWORD=tobemodified
