--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,17 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview",
     "prod": "NODE_ENV=production vue-cli-service build",
-    "lint": "vue-cli-service lint",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
     "format": "prettier src --write"
   },
   "dependencies": {
     "@apollo/client": "^3.10.6",
     "@tato30/vue-pdf": "^1.10.0",
     "@vue/apollo-option": "^4.0.0",
-    "core-js": "^3.8.3",
     "graphql": "^16.9.0",
     "graphql-tag": "^2.12.6",
     "less": "^4.2.0",
@@ -30,15 +30,11 @@
     "vuex": "^4.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.7",
-    "@babel/eslint-parser": "^7.24.7",
-    "@babel/plugin-transform-class-static-block": "^7.26.0",
-    "@babel/plugin-transform-private-methods": "^7.24.7",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
+    "@vitejs/plugin-vue": "^5.2.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "vite": "^6.0.6",
+    "vite-ssg": "^28.3.0"
   },
   "eslintConfig": {
     "root": true,
