--- a/rendertron/docker-compose.yml
+++ b/rendertron/docker-compose.yml
@@ -7,3 +7,5 @@ services:
     restart: unless-stopped
     ports:
       - "127.0.0.1:3000:3000"
+    volumes:
+      - ./config.json:/usr/src/app/config.json:ro
